add a text field also clean up code

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,6 @@ lwjgl_version = 3.3.3
 lwjgl_natives = windows, macos, macos-arm64
 
 # possible things to add: ztsd for compression, lmdb for databases
-lwjgl_modules = glfw, opengl, stb, nuklear
+lwjgl_modules = glfw, opengl, stb, nuklear, jemalloc
 
 joml_version = 1.10.5
