--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ lwjgl_natives = windows, macos, macos-arm64
 lwjgl_modules = glfw, opengl, stb, nuklear, jemalloc
 
 joml_version = 1.10.5
+lombok_version = 1.18.32
