jar compression and autobuild

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ lwjgl_modules = glfw, opengl, stb, nuklear, jemalloc
 
 joml_version = 1.10.5
 lombok_version = 1.18.32
+
+strip_source_files = true
