serialization to json5 + screenshots also sources jar for old orbital?

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@ lwjgl_modules = glfw, opengl, stb, nuklear, jemalloc
 
 joml_version = 1.10.5
 lombok_version = 1.18.32
+jankson_version = 1.2.3
 
 strip_source_files = true
