--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,12 @@ archives_base_name = orbital2
 lwjgl_version = 3.3.3
 lwjgl_natives = windows, macos, macos-arm64
 
-# possible things to add: ztsd for compression, lmdb for databases
-lwjgl_modules = glfw, opengl, stb, nuklear, jemalloc
+# possible things to add: ztsd for compression, lmdb for databases, stb for images
+lwjgl_modules = glfw, opengl, nuklear, jemalloc
 
 joml_version = 1.10.5
 lombok_version = 1.18.32
 jankson_version = 1.2.3
 
+advzip = true
 strip_source_files = true
